updated img path

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>puppy lovers page</title>
-    <link rel="stylesheet" href="CSS/style.css" />
+    <link rel="stylesheet" href="./project/CSS/style.css" />
   </head>
   <body>
     <!--header section-->
@@ -14,21 +14,21 @@
     <!--banner section-->
     <section>
       <div class="bannerpage">
-        <img src="image/images/banner-puppies.jpg" alt="" />
+        <img src="./project/image/images/banner-puppies.jpg" alt="" />
       </div>
     </section>
     <!--pappy 1 & pappy 2 section-->
 
     <section class="puppies">
       <div class="puppy1">
-        <img src="image/images/puppy-1.jpg" alt="" />
+        <img src="./project/image/images/puppy-1.jpg" alt="" />
       </div>
       <div class="puppytxt">
         <h2>puppy missing here!!</h2>
       </div>
 
       <div class="puppy-2">
-        <img src="image/images/puppy-2.jpg" alt="" />
+        <img src="./project/image/images/puppy-2.jpg" alt="" />
       </div>
     </section>
 
@@ -38,9 +38,9 @@
 
     <section class="twoPappy">
       <div>
-        <img src="image/images/puppy-3.jpg" alt="" />
+        <img src="./project/image/images/puppy-3.jpg" alt="" />
       </div>
-      <div><img src="image/images/puppy-4.jpg" alt="" /></div>
+      <div><img src="./project/image/images/puppy-4.jpg" alt="" /></div>
     </section>
     <section>
       <footer>
